# orbital-tool

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/orbitalcalc/: CMakeLists.txt  main.cpp
src/orbitalcalc/body/: body.cpp  body.hpp
src/orbitalcalc/craft/: craft.cpp  craft.hpp
src/orbitalcalc/space/: space.cpp  space.hpp
src/orbitalcalc/time/: julian.cpp  julian.hpp
src/orbitgui/: CMakeLists.txt  main.py  mainwindow.py  newobjectwindow.py  orbitgui.cpp  treeobject.py
src/orbitgui/objects/: __init__.py  plugin1.py
src/orbitgui/plugins/: __init__.py  plugin1.py
src/orbitgui/ui/: newobjectWindow.glade  ui.glade
src/orbitgui/windows/: mainwin.cpp  mainwin.hpp
